force-app/main/default/objects/Cat__c/fields/Cat_Breed__c.field-meta.xml
<CustomField>
    <fullName>Cat_Breed__c</fullName>
    <label>Cat Breed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>