force-app/main/default/objects/Cat__c/fields/Cat_Gender__c.field-meta.xml
<CustomField>
    <fullName>Cat_Gender__c</fullName>
    <label>Cat Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>