force-app/main/default/objects/Cat__c/fields/Cat_Owner__c.field-meta.xml
<CustomField>
    <fullName>Cat_Owner__c</fullName>
    <label>Cat Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cats</relationshipLabel>
    <relationshipName>Cats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>